betalogtail: Add div ids for parsing updates.

--- a/betalogtail.html
+++ b/betalogtail.html
@@ -100,10 +100,10 @@
             var dataLength = data.length;
             for (var i=0; i<dataLength; i++) {
                 output+='<div id="'+data[i].i+'_row" class="row">';
-                output+='<div class="col-md-3"><b>['+data[i].i+',&nbsp;'+moment(data[i].t*1000).format("YYYY-MM-DD HH:mm:ss")+']</b></div>';
-                output+='<div class="col-md-4">'+data[i].p+'</div>';
-                output+='<div class="col-md-2"><a href="nodeInfo?id='+data[i].ni+'">'+data[i].nn+'</a></div>';
-                output+='<div class="col-md-3">'+data[i].s+'</div>';
+                output+='<div id="'+data[i].i+'_timestamp" class="col-md-3"><b>['+data[i].i+',&nbsp;'+moment(data[i].t*1000).format("YYYY-MM-DD HH:mm:ss")+']</b></div>';
+                output+='<div id="'+data[i].i+'_packet" class="col-md-4">'+data[i].p+'</div>';
+                output+='<div id="'+data[i].i+'_uploader" class="col-md-2"><a href="nodeInfo?id='+data[i].ni+'">'+data[i].nn+'</a></div>';
+                output+='<div id="'+data[i].i+'_state" class="col-md-3">'+data[i].s+'</div>';
                 output+='</div>';
             }
             $("#logtail-inner").html(output);
@@ -116,22 +116,17 @@
         var output="";
         data=JSON.parse(message);
         output+='<div id="'+data.i+'_row" class="row">';
-        output+='<div class="col-md-3"><b>['+data.i+',&nbsp;'+moment(data.t*1000).format("YYYY-MM-DD HH:mm:ss")+']</b></div>';
-        output+='<div class="col-md-4">'+data.p+'</div>';
-        output+='<div class="col-md-2"><a href="nodeInfo?id='+data.ni+'">'+data.nn+'</a></div>';
-        output+='<div class="col-md-3">'+data.s+'</div>';
+        output+='<div id="'+data.i+'_timestamp" class="col-md-3"><b>['+data.i+',&nbsp;'+moment(data.t*1000).format("YYYY-MM-DD HH:mm:ss")+']</b></div>';
+        output+='<div id="'+data.i+'_packet" class="col-md-4">'+data.p+'</div>';
+        output+='<div id="'+data.i+'_uploader" class="col-md-2"><a href="nodeInfo?id='+data.ni+'">'+data.nn+'</a></div>';
+        output+='<div id="'+data.i+'_state" class="col-md-3">'+data.s+'</div>';
         output+='</div>';
         $("#logtail-inner").html(output+$("#logtail-inner").html());
     });
     
     socket.on("parse_row", function(message, urgency){
-        var output="";
         data=JSON.parse(message);
-        output+='<div class="col-md-3"><b>['+data.i+',&nbsp;'+moment(data.t*1000).format("YYYY-MM-DD HH:mm:ss")+']</b></div>';
-        output+='<div class="col-md-4">'+data.p+'</div>';
-        output+='<div class="col-md-2"><a href="nodeInfo?id='+data.ni+'">'+data.nn+'</a></div>';
-        output+='<div class="col-md-3">'+data.s+'</div>';
-        $("#'+data.i+'_row").html(output);
+        $("#'+data.i+'_state").html(data.s);
     });
     
     $("#logtail-inner").html("<p>Loading..</p>");
