--- a/map.html
+++ b/map.html
@@ -102,7 +102,7 @@
     
     function refreshNodes() {
         $.ajax({
-	        url: "api/mapNodes",
+	        url: "nuapi/mapNodes",
 	        type: "GET",
 	        dataType: 'json',
 	        success: function( data ) {
@@ -110,28 +110,27 @@
 	                var utcTime = moment.utc().unix();
 	                var dataLength = data.length;
 	                for (var i=0; i<dataLength; i++) {
-	                    if(data[i].a<utcTime-24*3600) {
+	                    if(data[i].ltime<utcTime-24*3600) {
 	                        continue;
 	                    }
-	                    if(data[i].a>utcTime-3600) {
+	                    if(data[i].ltime>utcTime-3600) {
 	                        var nodeIcon = activeIcon;
 	                    } else {
 	                        var nodeIcon = deadIcon;
 	                    }
-	                    var popupHtml = '<b style="font-size:12px">'+data[i].n+"</b> (<a href='/nodeInfo?id="+data[i].i+"' target='_blank'>node info</a>)<br>"
-                            +"<b>Owner:</b> "+data[i].o+"<br>"
-                            +"<b>Last Packet:</b> "+data[i].p+"<br>"
-                            +"<b>Last Active:</b> <i>"+moment(data[i].a*1000).fromNow()+"</i>";
-	                    if(!nodeMarkers[data[i].n]) {
-	                        nodeMarkers[data[i].n] = L.marker([data[i].la,data[i].lo], {
-                                title: data[i].nn,
+	                    var popupHtml = '<b style="font-size:12px">'+data[i].name.trim()+"</b> (<a href='/nodeInfo?id="+data[i].id+"' target='_blank'>node info</a>)<br>";
+	                    if(data[i].owner!=null) popupHtml+="<b>Owner:</b> "+data[i].owner.trim()+"<br>";
+                        popupHtml+="<b>Last Active:</b> <i>"+moment(data[i].ltime*1000).fromNow()+"</i>";
+	                    if(!nodeMarkers[data[i].id]) {
+	                        nodeMarkers[data[i].id] = L.marker([data[i].lat,data[i].lon], {
+                                title: data[i].name.trim(),
                                 icon: nodeIcon
                             }).addTo(map);
-                            nodeMarkers[data[i].n].bindPopup(popupHtml);
+                            nodeMarkers[data[i].id].bindPopup(popupHtml);
                         } else {
-                            nodeMarkers[data[i].n].setIcon(nodeIcon);
-                            nodeMarkers[data[i].n].setLatLng([data[i].la,data[i].lo]);
-                            nodeMarkers[data[i].n].setPopupContent(popupHtml);
+                            nodeMarkers[data[i].id].setIcon(nodeIcon);
+                            nodeMarkers[data[i].id].setLatLng([data[i].lat,data[i].lon]);
+                            nodeMarkers[data[i].id].setPopupContent(popupHtml);
                         }
                     }
 		        }
