--- a/nodeEdit.html
+++ b/nodeEdit.html
@@ -107,7 +107,7 @@
     $(document).ready(function() {
         $("#node-select").change(function() {
             if($("#node-select").val()!="select") {
-                $("#owner").val(nodeData[$("#node-select").val()].o);
+                $("#owner").val(nodeData[$("#node-select").val()].owner);
             }
 	    });
 	    // Add Node Form 'Submit' Action
@@ -119,11 +119,11 @@
 		    }
 		    $("#editStatus").html("<b>Submitting</b>");
 		    $.ajax({
-			    url: "api/editNode",
+			    url: "nuapi/editNode",
 			    type: "POST",
 			    data: {
-				    id: $("#node-select").val(),
-				    owner: $("#owner").val()
+				    id: $("#node-select").val().trim(),
+				    owner: $("#owner").val().trim()
 			    },
 			    dataType: 'json',
 			    success: function( data ) {
@@ -136,15 +136,15 @@
 		    });
 	    });
 	    $.ajax({
-            url: "api/nodeInfo",
+            url: "nuapi/nodeInfo",
             type: "GET",
             dataType: 'json',
             success: function( data ) {
 	            if(data.length!=0) {
 	                var dataLength = data.length;
 	                for (var i=0; i<dataLength; i++) {
-	                    $("#node-select").append("<option value='"+data[i].i+"'>"+data[i].n+"</option>");
-	                    nodeData[data[i].i] = data[i];
+	                    $("#node-select").append("<option value='"+data[i].id+"'>"+data[i].name.trim()+"</option>");
+	                    nodeData[data[i].id] = data[i];
 	                }
 	            }
             }
