--- a/map.html
+++ b/map.html
@@ -102,7 +102,7 @@
     
     function refreshNodes() {
         $.ajax({
-	        url: "nuapi/mapNodes",
+	        url: "api/mapNodes",
 	        type: "GET",
 	        dataType: 'json',
 	        success: function( data ) {
