--- a/nodeList.html
+++ b/nodeList.html
@@ -89,7 +89,7 @@
     
     function refreshNodeList() {
         $.ajax({
-	        url: "nuapi/nodeInfo",
+	        url: "api/nodeInfo",
 	        type: "GET",
 	        dataType: 'json',
 	        success: function( data ) {
