Revert "map: Move dead icons to back."
This reverts commit af51254b401f5adcb8232fb03f11b90d15ecff1d.

--- a/map.html
+++ b/map.html
@@ -91,8 +91,7 @@
         iconUrl: 'static/icons/antenna-red.png',
         iconSize:     [26, 32], // size of the icon
         iconAnchor:   [13, 32], // point of the icon which will correspond to marker's location
-        popupAnchor: [0, -32],
-        zIndexOffset: -100
+        popupAnchor: [0, -32]
     });
     
     refreshNodes();
