--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
     <meta name="description" content="UKHASnet - A simple license-free mesh network">
     <meta name="author" content="UK High Altitude Society">
     <title>UKHASnet</title>
+    <!-- build:css static/compiled.min.css -->
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/bootstrap/css/ukhasnet.css" rel="stylesheet">
+    <!-- /build -->
     <style>
     body {
         padding-top: 70px;
@@ -73,8 +75,10 @@
       </div>
 
     </div>
-    <script src="static/jquery-1.11.0.min.js"></script>
+    <!-- build:css static/jquerybootstrap.min.js -->
+    <script src="static/jquery/jquery-1.11.0.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <!-- /build -->
     <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-48058948-1', 'ukhas.net');ga('send', 'pageview');</script>
   </body>
 </html>
