--- a/src/map.html
+++ b/src/map.html
@@ -7,9 +7,11 @@
     <meta name="description" content="Map of the UKHASnet Mesh Network">
     <meta name="author" content="UK High Altitude Society">
     <title>Map - UKHASnet</title>
+    <!-- build:css static/compiled.min.css -->
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/leaflet/leaflet.css" rel="stylesheet">
     <link href="static/bootstrap/css/ukhasnet.css" rel="stylesheet">
+    <!-- /build -->
+    <link href="static/leaflet/leaflet.css" rel="stylesheet">
     <style>
     body {
         padding-top: 50px;
@@ -60,8 +62,10 @@
       </div>
     </div>
     <div id="map"></div>
-    <script src="static/jquery-1.11.0.min.js"></script>
+    <!-- build:css static/jquerybootstrap.min.js -->
+    <script src="static/jquery/jquery-1.11.0.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <!-- /build -->
     <script src="static/leaflet/leaflet.js"></script>
     <script src="static/moment.min.js"></script>
     <script>
