--- a/src/nodeAdd.html
+++ b/src/nodeAdd.html
@@ -7,8 +7,10 @@
     <meta name="description" content="Add nodes to the UKHASnet Mesh Network">
     <meta name="author" content="UK High Altitude Society">
     <title>nodeAdd - UKHASnet</title>
+    <!-- build:css static/compiled.min.css -->
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/bootstrap/css/ukhasnet.css" rel="stylesheet">
+    <!-- /build -->
     <style>
     body {
         padding-top: 30px;
@@ -97,8 +99,10 @@
       </div>
 
     </div><!-- /.container -->
-    <script src="static/jquery-1.11.0.min.js"></script>
+    <!-- build:css static/jquerybootstrap.min.js -->
+    <script src="static/jquery/jquery-1.11.0.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <!-- /build -->
     <script>
     var pageStarting=true;
     
