--- a/src/nodeInfo.html
+++ b/src/nodeInfo.html
@@ -7,8 +7,10 @@
     <meta name="description" content="UKHASnet - A simple and license-free mesh network.">
     <meta name="author" content="UK High Altitude Society">
     <title>UKHASnet</title>
+    <!-- build:css static/compiled.min.css -->
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/bootstrap/css/ukhasnet.css" rel="stylesheet">
+    <!-- /build -->
     <style>
     body {
         padding-top: 30px;
@@ -113,8 +115,10 @@
     <div id="nodegraphs" class="col-md-7 node-graphs">
     </div>
     </div><!-- /.container -->
-    <script src="static/jquery-1.11.0.min.js"></script>
+    <!-- build:css static/jquerybootstrap.min.js -->
+    <script src="static/jquery/jquery-1.11.0.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <!-- /build -->
     <script src="static/moment.min.js"></script>
     <script src="static/dygraph-combined.js"></script>
     <script>
