Fix grunt js build.

--- a/src/nodeInfo.html
+++ b/src/nodeInfo.html
@@ -115,7 +115,7 @@
     <div id="nodegraphs" class="col-md-7 node-graphs">
     </div>
     </div><!-- /.container -->
-    <!-- build:css static/jquerybootstrap.min.js -->
+    <!-- build:js static/jquerybootstrap.min.js -->
     <script src="static/jquery/jquery-1.11.0.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <!-- /build -->
