--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
       </div>
 
     </div>
-    <!-- build:css static/jquerybootstrap.min.js -->
+    <!-- build:js static/jquerybootstrap.min.js -->
     <script src="static/jquery/jquery-1.11.0.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <!-- /build -->
