--- a/src/map.html
+++ b/src/map.html
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div id="map"></div>
-    <!-- build:css static/jquerybootstrap.min.js -->
+    <!-- build:js static/jquerybootstrap.min.js -->
     <script src="static/jquery/jquery-1.11.0.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <!-- /build -->
