--- a/src/nodeAdd.html
+++ b/src/nodeAdd.html
@@ -99,7 +99,7 @@
       </div>
 
     </div><!-- /.container -->
-    <!-- build:css static/jquerybootstrap.min.js -->
+    <!-- build:js static/jquerybootstrap.min.js -->
     <script src="static/jquery/jquery-1.11.0.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <!-- /build -->
