map: Remove diff markers - oops

--- a/src/map.html
+++ b/src/map.html
@@ -165,10 +165,10 @@
                                 icon: gateIcon
                             }).addTo(map);
                         } else {
- -                          nodeMarkers[nodeName][0].setLatLng([data[i].lat,data[i].lon]);
- -                          nodeMarkers[nodeName][1].setLatLng([data[i].lat,data[i].lon]);
- -                          nodeMarkers[nodeName][2].setLatLng([data[i].lat,data[i].lon]);
- -                      }
+                            nodeMarkers[nodeName][0].setLatLng([data[i].lat,data[i].lon]);
+                            nodeMarkers[nodeName][1].setLatLng([data[i].lat,data[i].lon]);
+                            nodeMarkers[nodeName][2].setLatLng([data[i].lat,data[i].lon]);
+                        }
                     }
 		        }
 	        }
