--- a/src/logtail.html
+++ b/src/logtail.html
@@ -105,7 +105,7 @@
             var dataLength = data.length;
             for (var i=0; i<dataLength; i++) {
                 output+='<div id="'+data[i].i+'_row" class="row">';
-                output+='<div id="'+data[i].i+'_timestamp" class="col-md-3"><b>['+data[i].i+',&nbsp;'+moment(data[i].t*1000).format("YYYY-MM-DD HH:mm:ss")+']</b></div>';
+                output+='<div id="'+data[i].i+'_timestamp" class="col-md-3"><b>['+data[i].i+',&nbsp;'+moment(Date.parse(data[i].t)).format("YYYY-MM-DD HH:mm:ss")+']</b></div>';
                 output+='<div id="'+data[i].i+'_packet" class="col-md-5">'+data[i].p+'</div>';
                 output+='<div id="'+data[i].i+'_uploader" class="col-md-1"><a href="nodeInfo?id='+data[i].ni+'">'+data[i].nn+'</a></div>';
                 if(data[i].r==0 || typeof(data[i].r)=='undefined') {
