--- a/src/nodeEdit.html
+++ b/src/nodeEdit.html
@@ -177,8 +177,7 @@
 	            if(data.length!=0) {
 	                var dataLength = data.length;
 	                for (var i=0; i<dataLength; i++) {
-	                    $("#type-select").append("<option value='"+data[i][0]+"'>"+data[i][1]+"</option>");
-	                    nodeData[data[i].id] = data[i];
+	                    $("#type-select").append("<option value='"+data[i].id+"'>"+data[i].desc+"</option>");
 	                }
                     $("#type-select").val("");
 	            }
