nodeAdd: Rename API call for new API.

--- a/src/nodeAdd.html
+++ b/src/nodeAdd.html
@@ -112,7 +112,7 @@
 		        return;
 		    }
             $.ajax({
-	            url: "api/checkNodeId",
+	            url: "api/nodeNameAvailable",
 	            type: "GET",
 	            dataType: 'json',
 	            data: {
