nodeInfo: COrrectly set time period for graphs on load.

--- a/src/nodeInfo.html
+++ b/src/nodeInfo.html
@@ -124,7 +124,7 @@
     <script>
     var pageStarting=true;
     var graphObjs = [];
-    var dataInterval = 86400; // 24 hours
+    var dataInterval = 48*3600; // 48 hours
 
     getNodeInfo();
     getNodePackets();
