--- a/src/nodeEdit.html
+++ b/src/nodeEdit.html
@@ -56,8 +56,8 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://www.ukhas.net/wiki/" target="_blank">Wiki</a></li>
-            <li><a href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank">IRC Chat</a></li>
+            <li><a href="//www.ukhas.net/wiki/" target="_blank">Wiki</a></li>
+            <li><a href="https://webchat.freenode.net/?channels=ukhasnet" target="_blank">IRC Chat</a></li>
             <li><a href="https://github.com/UKHASnet/" target="_blank">GitHub</a></li>
             <li><a href="logtail">Logtail</a></li>
           </ul>
