--- a/src/map.html
+++ b/src/map.html
@@ -99,7 +99,7 @@
         worldCopyJump: true
     });
     
-    var osm = new L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+    var osm = new L.tileLayer('//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors',
         minZoom: 2,
         maxZoom: 19
