Add net favicon.

--- a/src/nodeAdd.html
+++ b/src/nodeAdd.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Add nodes to the UKHASnet Mesh Network">
     <meta name="author" content="UK High Altitude Society">
     <title>nodeAdd - UKHASnet</title>
+    <link rel="shortcut icon" href="/static/favicon-net-128.ico">
     <!-- build:css static/compiled.min.css -->
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/bootstrap/css/ukhasnet.css" rel="stylesheet">
