--- a/src/nodeEdit.html
+++ b/src/nodeEdit.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Edit Node Descriptions on the UKHASnet Mesh Network.">
     <meta name="author" content="UK High Altitude Society">
     <title>Edit Node - UKHASnet</title>
+    <link rel="shortcut icon" href="/static/favicon-net-128.ico">
     <!-- build:css static/compiled.min.css -->
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/bootstrap/css/ukhasnet.css" rel="stylesheet">
