--- a/src/nodeInfo.html
+++ b/src/nodeInfo.html
@@ -7,6 +7,7 @@
     <meta name="description" content="UKHASnet - A simple and license-free mesh network.">
     <meta name="author" content="UK High Altitude Society">
     <title>UKHASnet</title>
+    <link rel="shortcut icon" href="/static/favicon-net-128.ico">
     <!-- build:css static/compiled.min.css -->
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/bootstrap/css/ukhasnet.css" rel="stylesheet">
