--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 
     <div class="container">
       <div class="jumbotron">
-        <h1>UKHASnet</h1>
+        <h1>&nbsp;<img src="static/images/large-net-transparent.png" height="150px" width="150px" align="middle"/>&nbsp;&nbsp;UKHASnet</h1>
         <p>A simple wireless network aimed for use with low power licence exempt wireless modules. Ideally to be used for a local ground network for example for remote temperature sensing however will also be designed to allow for high altitude communications such as via meterological balloons.</p>
         <p>The modules used are extremely low cost, and the routing algorithm incredibly simple, to encourage widespread development and deployment.</p>
         <br />
