--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,9 @@
         <p><h2>Getting Started</h2></p>
         <p>To start your own mesh network, the <a href="http://www.ukhas.net/wiki/" target="_blank">Wiki</a> is a growing source of Guides and Information. Any questions, join us on <a href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank">IRC Chat</a> and say hello!</p>
       </div>
-
+    
+    <font color="grey">Logo by <a href="http://www.dottyprojects.com/" target="_blank">Scarlett Theron Rush</a></font>
+    <br><br>
     </div>
     <!-- build:js static/jquerybootstrap.min.js -->
     <script src="static/jquery/jquery-1.11.1.min.js"></script>
