Edit front page text.

--- a/src/index.html
+++ b/src/index.html
@@ -70,13 +70,24 @@
           <a class="btn btn-lg btn-primary" href="http://www.ukhas.net/wiki/" target="_blank" role="button">Wiki &raquo;</a>
           <a class="btn btn-lg btn-primary" href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank" role="button">IRC Channel &raquo;</a>
         </p>
-        <br />
+        <p><h2>Simple</h2></p>
+        <p>Plaintext ASCII-encoded Packets are human-readable. Zero-memory re-broadcast repeating borrows a lot from the APRS system used in Amateur Radio.
+        <br>eg.
+        <br>Packet transmitted from Sensor: <i>1mT18.7H72.9V4.55[S01]</i>
+        <br>Packet repeated by another Node: <i><b>0</b>mT18.7H72.9V4.55[S01<b>,R01</b>]</i>
+        <br>
+        <br>Watch the <a href="logtail">Live Packet Upload Feed</a> to see what people are already using.
+        </p>
+        <p><h2>Low Cost</h2></p>
+        <p>A simple RF standard of 2kbps FSK on 869.5 MHz allows the choice and interoperation of several cheap and easily available ISM Transceiver Modules. Combined with low power ARM Cortex Microcontrollers, you can easily build a simple AA-battery powered node for under £10.
+        <br>
+        <br>See <a href="/wiki/node_implementations" target="_blank">Community Implementations on the Wiki</a> for some ideas.</p>
         <p><h2>Getting Started</h2></p>
-        <p>To start your own mesh network, the <a href="http://www.ukhas.net/wiki/" target="_blank">Wiki</a> is a growing source of Guides and Information. Any questions, join us on <a href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank">IRC Chat</a> and say hello!</p>
+        <p>We're building up information and guides on the <a href="http://www.ukhas.net/wiki/" target="_blank">Wiki</a>. Also have a look around and do drop in on <a href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank">IRC Chat (#ukhasnet)</a> to say hello to the rest of us, and ask any questions!</p>
       </div>
     
     <font color="grey">Logo by <a href="http://www.dottyprojects.com/" target="_blank">Scarlett Theron Rush</a></font>
-    <br><br>
+    <br /><br />
     </div>
     <!-- build:js static/jquerybootstrap.min.js -->
     <script src="static/jquery/jquery-1.11.1.min.js"></script>
