--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
     body {
         padding-top: 70px;
     }
+    .appeardown {
+        display: none;
+    }
     </style>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -70,16 +73,16 @@
           <a class="btn btn-lg btn-primary" href="http://www.ukhas.net/wiki/" target="_blank" role="button">Wiki &raquo;</a>
           <a class="btn btn-lg btn-primary" href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank" role="button">IRC Channel &raquo;</a>
         </p>
-        <p><h2>Simple</h2></p>
-        <p>Plaintext ASCII-encoded Packets are human-readable. Zero-memory re-broadcast repeating borrows a lot from the APRS system used in Amateur Radio.
+        <p><h2 id="titlesimple">Simple ></h2></p>
+        <p id="appearsimple" class="appeardown">Plaintext ASCII-encoded Packets are human-readable. Zero-memory re-broadcast repeating borrows a lot from the APRS system used in Amateur Radio.
         <br>eg.
         <br>Packet transmitted from Sensor: <i>1mT18.7H72.9V4.55[S01]</i>
         <br>Packet repeated by another Node: <i><b>0</b>mT18.7H72.9V4.55[S01<b>,R01</b>]</i>
         <br>
         <br>Watch the <a href="logtail">Live Packet Upload Feed</a> to see what people are already using.
         </p>
-        <p><h2>Low Cost</h2></p>
-        <p>A simple RF standard of 2kbps FSK on 869.5 MHz allows the choice and interoperation of several cheap and easily available ISM Transceiver Modules. Combined with low power ARM Cortex Microcontrollers, you can easily build a simple AA-battery powered node for under £10.
+        <p><h2 id="titlelowcost">Low Cost ></h2></p>
+        <p id="appearlowcost" class="appeardown">A simple RF standard of 2kbps FSK on 869.5 MHz allows the choice and interoperation of several cheap and easily available ISM Transceiver Modules. Combined with low power ARM Cortex Microcontrollers, you can easily build a simple AA-battery powered node for under £10.
         <br>
         <br>See <a href="/wiki/node_implementations" target="_blank">Community Implementations on the Wiki</a> for some ideas.</p>
         <p><h2>Getting Started</h2></p>
@@ -93,6 +96,20 @@
     <script src="static/jquery/jquery-1.11.1.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <!-- /build -->
+    <script>
+    $("#titlesimple").hover(function(){
+        $("#appearsimple").slideDown("fast");
+    });
+    $("#appearsimple").mouseout(function(){
+        $("#appearsimple").slideUp("fast");
+    });
+    $("#titlelowcost").hover(function(){
+        $("#appearlowcost").slideDown("fast");
+    });
+    $("#appearlowcost").mouseout(function(){
+        $("#appearlowcost").slideUp("fast");
+    });
+    </script>
     <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-48058948-1', 'ukhas.net');ga('send', 'pageview');</script>
   </body>
 </html>
