index.php: Fix button links.

--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,8 @@
         <br />
         <p>
           <a class="btn btn-lg btn-primary" href="map" role="button">Network Map &raquo;</a>
-          <a class="btn btn-lg btn-primary" href="http://www.ukhas.net/wiki/" target="_blank" role="button">Wiki &raquo;</a>
-          <a class="btn btn-lg btn-primary" href="http://webchat.freenode.net/?channels=ukhasnet" target="_blank" role="button">IRC Channel &raquo;</a>
+          <a class="btn btn-lg btn-primary" href="/wiki/" target="_blank" role="button">Wiki &raquo;</a>
+          <a class="btn btn-lg btn-primary" href="//webchat.freenode.net/?channels=ukhasnet" target="_blank" role="button">IRC Channel &raquo;</a>
         </p>
         <p><h2 id="titlesimple">Simple ></h2></p>
         <p id="appearsimple" class="appeardown">Plaintext ASCII-encoded Packets are human-readable. Zero-memory re-broadcast repeating borrows a lot from the APRS system used in Amateur Radio.
