--- a/src/map.html
+++ b/src/map.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="/static/favicon-net-128.ico">
     <!-- build:css static/compiled.min.css -->
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/bootstrap/css/ukhasnet.css" rel="stylesheet">
+    <link href="static/ukhasnet.css" rel="stylesheet">
     <!-- /build -->
     <link href="static/leaflet/leaflet.css" rel="stylesheet">
     <style>
