moved js libs to static and adjusted nodeInfo accordingly

--- a/src/nodeInfo.html
+++ b/src/nodeInfo.html
@@ -143,8 +143,8 @@
     <!-- /build -->
     <script src="static/moment.min.js"></script>
     <script src="static/dygraph-combined.js"></script>
-    <script src="d3.min.js"></script>
-    <script src="socket.io.min.js"></script>
+    <script src="static/d3.min.js"></script>
+    <script src="static/socket.io.min.js"></script>
     <script>
     var pageStarting=true;
     var graphObjs = [];
